<resources>
    <string name="app_name">Hangman</string>
    <string name="instructions">Welcome to Hangman! To play, try to guess the hidden word by selecting letters one at a time. If you guess a correct letter, it will be revealed in the word. If you guess an incorrect letter, it will count as a guess. Good luck!</string>
    <string name="start">Start</string>
    <string name="level">Level</string>
    <string name="settings">Settings</string>
    <string name="guess">Guess</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="back">Back</string>
    <string name="restart">Restart</string>




    <string name="pref_length_title">Length of Words</string>
    <string name="pref_length_key">word_length</string>
</resources>