<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/hangman_start">

    <fragment
        android:id="@+id/hangman_start"
        android:name="com.example.hangman.HangmanStartFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/navigate_to_hangman_level"
            app:destination="@id/hangman_level" />
        <action
            android:id="@+id/navigate_to_settings"
            app:destination="@id/settings" />
    </fragment>
    <fragment
        android:id="@+id/hangman_level"
        android:name="com.example.hangman.HangmanLevel"
        android:label="@string/level">
        <argument
            android:name="length"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/settings"
        android:name="com.example.hangman.SettingsFragment"
        android:label="@string/settings" />

</navigation>